Bug 34578 - HTTP-POST's of 21MB size make konqueror fail
Summary: HTTP-POST's of 21MB size make konqueror fail
Status: RESOLVED FIXED
Alias: None
Product: kio
Classification: Unmaintained
Component: http (other bugs)
Version First Reported In: 3.0
Platform: Debian testing Linux
: NOR normal
Target Milestone: ---
Assignee: Dawit Alemayehu
URL:
Keywords:
: 36108 56328 89367 96659 120559 196117 216958 253517 (view as bug list)
Depends on:
Blocks:
 
Reported: 2001-11-06 11:03 UTC by mig-o
Modified: 2011-12-22 02:36 UTC (History)
8 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.7.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description mig-o 2001-11-06 10:52:48 UTC
(*** This bug was imported into bugs.kde.org ***)

Package:           kio-http
Version:           3.0 (using KDE 2.2.1 )
Severity:          normal
Installed from:    Debian Package 4:2.2.1-14 (testing/unstable)
Compiler:          gcc version 2.95.4 20011006 (Debian prerelease)
OS:                Linux (i686) release 2.4.6
OS/Compiler notes: 

I try to use the http-post method to upload files onto my server.
With konqueror 5 MB files are no problem but a linux kernel with 21MB could not be sent.

I window pops up aftrer pressing the Submit-Button and tells ma that the <URL of my site> - Process has terminated unexpected.
Before my harddisk is running a few seconds. (There's enough space for evtl. done swapping on my disk).

OK Opera fails on smaller sizes but IE does this very well.

Thanks for fixing this. Hope the bug is sent to the korrect package. 


(Submitted via bugs.kde.org)
(Called from KBugReport dialog)
Comment 1 Waldo Bastian 2002-09-13 22:26:52 UTC
Konqueror should not try to send the whole file in one chunk to the http-slave,
but stream it.
Comment 2 Dawit Alemayehu 2003-01-31 04:40:34 UTC
*** Bug 36108 has been marked as a duplicate of this bug. ***
Comment 3 Dawit Alemayehu 2003-03-24 21:32:13 UTC
*** Bug 56328 has been marked as a duplicate of this bug. ***
Comment 4 Clemens Schwaighofer 2004-08-05 09:14:14 UTC
KDE 3.2.3 konqueror has _STILL_ this bug. Is this unfixable? Its a very annoying bug. If I try to upload huge files all my memory is consumed and my system gets very slow. The upload bar also stalls and doesn't show the actualy percentage of uploaded data.
Comment 5 Dawit Alemayehu 2004-08-06 02:43:55 UTC
Yes, the fix for this is not trivial. It affects far too many components that require a lot of effort to fix. I already had a patch that took care of most of the problem, but after a long discussion it was decided that it needs to be improved a bit. I will dust it off once the freeze is over and see if it would be possible to get this fixed for one of those 3.3.x releases. Otherwise, it will have to wait for KDE 4.x. Sorry for the long delay...
Comment 6 Stephan Binner 2004-09-12 20:18:21 UTC
*** Bug 89367 has been marked as a duplicate of this bug. ***
Comment 7 Tommi Tervo 2005-02-02 15:07:05 UTC
*** Bug 96659 has been marked as a duplicate of this bug. ***
Comment 8 Ronny Standtke 2006-05-07 12:24:12 UTC
I just want to inform you that I have the same problem even in KDE 3.5.2. I am using a TWiki (http://twiki.org/) and it was impossible to upload a CD image with konqueror. Konqueror instantly consumed 100% CPU and around 2 Gig RAM and just seemed to hang. After switching to Firefox everything worked like expected...
Comment 9 Dawit Alemayehu 2007-09-02 06:49:37 UTC
*** Bug 120559 has been marked as a duplicate of this bug. ***
Comment 10 Dawit Alemayehu 2011-02-13 03:32:19 UTC
Git commit 01db8ec6e9934a13ed8025949dab9dd43010bf53 by Dawit Alemayehu.
Committed on 13/02/2011 at 02:59.
Pushed by adawit into branch 'master'.

Overloaded the KIO::http_post and KIO::storedHttpPost APIs with ones that
accept a QIODevice parameter instead of a QByteArray for the data source.
See http://git.reviewboard.kde.org/r/100516/ for the details.

BUG:34578
REVIEW:100516

M  +3    -0    kio/kio/global.cpp     
M  +2    -1    kio/kio/global.h     
M  +147  -6    kio/kio/job.cpp     
M  +33   -0    kio/kio/job.h     
M  +27   -0    kio/kio/job_p.h     
M  +1    -0    kio/kio/jobclasses.h     
M  +141  -49   kioslave/http/http.cpp     
M  +21   -2    kioslave/http/http.h     

http://commits.kde.org/kdelibs/01db8ec6e9934a13ed8025949dab9dd43010bf53
Comment 11 Dawit Alemayehu 2011-03-23 19:54:16 UTC
*** Bug 253517 has been marked as a duplicate of this bug. ***
Comment 12 Dawit Alemayehu 2011-03-23 19:56:42 UTC
*** Bug 216958 has been marked as a duplicate of this bug. ***
Comment 13 Dawit Alemayehu 2011-12-22 02:36:18 UTC
*** Bug 196117 has been marked as a duplicate of this bug. ***