Overloaded the KIO::http_post and KIO::storedHttpPost APIs with ones that accept a QIODevice parameter instead of a QByteArray for the data source. See http://git.reviewboard.kde.org/r/100516/ for the details.

BUG:34578
REVIEW:100516